--- a/main.css
+++ b/main.css
@@ -15,10 +15,9 @@ button{
 a{
 	color: blue;
 	padding: 4px;
-	margin: ;
 }
 
 ul{
-	background-color: whitesmoke;
+	background-color: #f5f5f5;
 	width: 100px;
 }
